[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/UserInterface/user_interface_theme.tres" type="Theme" id=1]
[ext_resource path="res://src/UserInterface/custom_button.gd" type="Script" id=5]

[node name="CustomButton" type="Button"]
margin_right = 48.0
margin_bottom = 16.0
rect_min_size = Vector2( 48, 16 )
theme = ExtResource( 1 )
keep_pressed_outside = true
script = ExtResource( 5 )

[connection signal="button_down" from="." to="." method="_on_CustomButton_button_down"]
[connection signal="button_up" from="." to="." method="_on_CustomButton_button_up"]
